# mix3d

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  SpatioTemporalSegmentation-ScanNet.patch  dvc.yaml  kpconv_pytorch_mix3d.patch  kpconv_tensorflow_mix3d.patch  pyproject.toml
docs/: index.html
mix3d/: __init__.py  __main__.py
mix3d/conf/: config.yaml
mix3d/conf/callbacks/: callbacks.yaml
mix3d/conf/data/: indoor.yaml
mix3d/conf/data/collation_functions/: voxelize_collate.yaml  voxelize_collate_merge.yaml
mix3d/conf/data/data_loaders/: simple_loader.yaml
mix3d/conf/data/datasets/: s3dis.yaml  scannet.yaml
mix3d/conf/logging/: base.yaml  offline.yaml
mix3d/conf/metrics/: miou.yaml
mix3d/conf/model/: baseline.yaml  outdoor_small.yaml
mix3d/conf/optimizer/: adamw.yaml
mix3d/conf/trainer/: short_trainer.yaml  trainer.yaml
mix3d/datasets/: semseg.py  utils.py
mix3d/datasets/preprocessing/: scannet_preprocessing.py
mix3d/logger/: csv_logger.py  json_logger.py  logger_utils.py
mix3d/models/: __init__.py  conditional_random_fields.py  res16unet.py  resnet.py  resunet.py
mix3d/models/modules/: common.py
mix3d/trainer/: trainer.py
mix3d/utils/: utils.py
scripts/: init.bash  local_run.bash  preprocess_matterport.bash  preprocess_rio.bash  preprocess_scannet.bash  preprocess_semantic_kitti.bash
scripts/experiments/: 1000_scene_merging.bash
